css/style.css
@import url('https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@1..1000&display=swap');

:root {
  --haven-blue: #ADCCD4;
  --haven-purple: #8F559C;
  --haven-black: #2E2F30;
  --haven-white: #EDE8E6;
}

body {
  font-family: "Ysabeau SC", sans-serif;
  font-style: normal;
  background: var(--haven-white);
  padding: 14px 24px;
}

img {
  max-width: 100%;
}

nav {
  background: var(--haven-white);
  display: flex;
  justify-content: space-between;
  padding: 2rem 3rem;
  align-items: center;
}

@media screen and (max-width:480px) {
  nav {
    flex-direction: column;
    gap: 40px;
  }
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  gap: 45px;
}

nav a {
  font-size: 20px;
  color: var(--haven-black);
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

.shopbtn {
  border-radius: 12px;
  background: var(--haven-blue);
  padding: 14px 24px;

  &:hover {
    background: var(--haven-purple);
    text-decoration: none;
    color: var(--haven-white);
  }
}

.shopallbtn {
  border-radius: 12px;
  background: var(--haven-blue);
  padding: 14px 24px;

  &:hover {
    background: var(--haven-purple);
    text-decoration: none;
    color: var(--haven-white);
  }
}

@media screen and (max-width:480px) {
  h1 {
    font-family: "Ysabeau SC", sans-serif;
    font-size: 24px;
  }
}

.hero {
  background: var(--haven-black);
  color: var(--haven-white);
  padding: 4rem 3rem;
  display: flex;
}

.shopall {
  background: var(--haven-white);
  color: var(--haven-black);
}

.atcbtn {
  border-radius: 12px;
  background: var(--haven-purple);
  padding: 14px 24px;
  font-size: 20px;
  color: var(--haven-white);
  text-decoration: none;

  &:hover {
    background: var(--haven-blue);
    text-decoration: none;
    color: var(--haven-black);
  }
}

.blogbtn {
  border-radius: 12px;
  background: var(--haven-blue);
  padding: 14px 24px;

  &:hover {
    background: var(--haven-purple);
    text-decoration: none;
    color: var(--haven-white);
  }
}

.reviews {
  background: var(--haven-blue);
  color: var(--haven-black);
  padding: 14px 24px;
  font-size: 20px;
  display: flex;
  }
}

footer {
  background: var(--haven-white);
  color: var(--haven-black);
}

